Replace the deprecated functions